tests/ui/unsafe/ranged_ints3_match.stderr
error[E0133]: borrow of layout constrained field with interior mutability is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints3_match.rs:11:17
   |
LL |         NonZero(ref x) => { x }
   |                 ^^^^^ borrow of layout constrained field with interior mutability
   |
   = note: references to fields of layout constrained fields lose the constraints. Coupled with interior mutability, the field can be changed to invalid values

error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints3_match.rs:17:23
   |
LL |     match y { NonZero(ref mut y) => { y } };
   |                       ^^^^^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
